--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,25 @@
   width: 200px;
   border: 1px solid black;
 }
+
+.popup {
+  position: fixed;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1;
+  background-color: #f1e9d8;
+  padding: 20px;
+  border: 1px solid black;
+  display: none;
+}
+#overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  display: none;
+}
