--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,14 @@
   height: 200px;
   width: 200px;
   border: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.content {
+  font-size: 16px;
+  gap: 12px;
 }
 
 .popup {
