remove button and read button added

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "Roboto";
+  font-family: sans-serif;
 }
 
 .header {
@@ -41,16 +41,19 @@
 }
 .book {
   height: 200px;
-  width: 200px;
-  border: 1px solid black;
+  width: 250px;
+  border: 3px solid rgba(0, 0, 0, 0.75);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #f1e9d8;
+  border-radius: 12px;
 }
 .content {
-  font-size: 16px;
+  font-size: 24px;
   gap: 12px;
+  font-weight: 800;
 }
 
 .popup {
@@ -73,4 +76,11 @@
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
   display: none;
+}
+.notRead {
+  background-color: red;
+}
+
+.removeButton {
+  background-color: purple;
 }
